--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -19,7 +19,8 @@
     "bcryptjs": "^2.4.3",
     "zod": "^3.22.4",
     "date-fns": "^3.0.6",
-    "@google/generative-ai": "^0.21.0"
+    "@google/generative-ai": "^0.21.0",
+    "js-cookie": "^3.0.5"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
@@ -28,6 +29,7 @@
     "@types/react-dom": "^19",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/bcryptjs": "^2.4.6",
+    "@types/js-cookie": "^3.0.6",
     "eslint": "^9",
     "eslint-config-next": "16.0.3",
     "tailwindcss": "^4",
