--- a/ws/package.json
+++ b/ws/package.json
@@ -14,7 +14,8 @@
     "cors": "^2.8.5",
     "jsonwebtoken": "^9.0.2",
     "cookie-parser": "^1.4.6",
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "@google/generative-ai": "^0.21.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.0",
