--- a/ws/package.json
+++ b/ws/package.json
@@ -9,21 +9,22 @@
   },
   "dependencies": {
     "@attack-capital/db": "workspace:*",
-    "socket.io": "^4.7.5",
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "jsonwebtoken": "^9.0.2",
+    "@google/generative-ai": "^0.21.0",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "@google/generative-ai": "^0.21.0"
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "socket.io": "^4.7.5"
   },
   "devDependencies": {
-    "@types/node": "^20.11.0",
-    "@types/express": "^4.17.21",
-    "@types/cors": "^2.8.17",
-    "@types/jsonwebtoken": "^9.0.5",
     "@types/cookie-parser": "^1.4.6",
-    "typescript": "^5.3.3",
-    "tsx": "^4.7.0"
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/node": "^20.11.0",
+    "socket.io-client": "^4.8.1",
+    "tsx": "^4.7.0",
+    "typescript": "^5.3.3"
   }
 }
