--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -9,27 +9,28 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@attack-capital/db": "workspace:*",
+    "@google/generative-ai": "^0.21.0",
+    "bcryptjs": "^2.4.3",
+    "better-auth": "^1.0.7",
+    "date-fns": "^3.0.6",
+    "dotenv": "^17.2.3",
+    "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^9.0.2",
+    "next": "15.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.0.3",
-    "better-auth": "^1.0.7",
-    "@attack-capital/db": "workspace:*",
     "socket.io-client": "^4.7.5",
-    "jsonwebtoken": "^9.0.2",
-    "bcryptjs": "^2.4.3",
-    "zod": "^3.22.4",
-    "date-fns": "^3.0.6",
-    "@google/generative-ai": "^0.21.0",
-    "js-cookie": "^3.0.5"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/js-cookie": "^3.0.6",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@types/jsonwebtoken": "^9.0.5",
-    "@types/bcryptjs": "^2.4.6",
-    "@types/js-cookie": "^3.0.6",
     "eslint": "^9",
     "eslint-config-next": "16.0.3",
     "tailwindcss": "^4",
